--- a/src/components/Tasks/tasks.module.css
+++ b/src/components/Tasks/tasks.module.css
@@ -10,7 +10,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 header div {
@@ -35,4 +35,10 @@ header span {
 
 .textPurple {
   color: var(--purp le);
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
 }
