--- a/src/components/Task/task.module.css
+++ b/src/components/Task/task.module.css
@@ -17,6 +17,11 @@
   margin-right: auto;
 }
 
+p.textCompleted {
+  color: var(--gray-300);
+  text-decoration: line-through;
+}
+
 .checkContainer {
   min-width: 1.125rem;
   height: 1.125rem;
@@ -29,6 +34,12 @@
   height: 100%;
   border: 2px solid var(--blue);
   border-radius: 50%;
+}
+
+.checkContainer svg {
+  width: 100%;
+  height: 100%;
+  color: var(--purple);
 }
 
 .deleteButton {
