style: :lipstick: Estilização de lista vazia

--- a/src/components/Tasks/tasks.module.css
+++ b/src/components/Tasks/tasks.module.css
@@ -42,3 +42,26 @@ header span {
   flex-direction: column;
   gap: 0.75rem;
 }
+
+.empty {
+  margin-top: 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.empty svg {
+  color: var(--gray-400);
+}
+
+.empty p {
+  color: var(--gray-200);
+  margin-bottom: 0.3rem;
+}
+
+.empty span {
+  color: var(--gray-400);
+}
